--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ build:
 requirements:
   build:
     - make
-    #- {{ stdlib("c") }}
+    - {{ stdlib("c") }}
     - {{ compiler('fortran') }}
 
 test:
